k8s/media-services/youtarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: youtarr
  namespace: media-services
  labels:
    app: youtarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: youtarr
